Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTI429API ERRVAL __stdcall BTI429_Sched4Build(INT nummsgs,LPMSGADDR msgaddrptr,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched4BuildEx(LPINT styleptr,INT nummsgs,INT minorframetime,INT majorframetime,LPINT targetlist,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL interceptflag);
BTI429API ERRVAL __stdcall BTI429_Sched4BuildExx(INT style,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL tryflag,INT nummsgs,INT minorframetime,INT majorframetime,LPINT targetlist,LPINT minlist,LPINT maxlist,LPINT entriesptr,LPINT maxentriesptr,LPVOID infoptr,LPMSGADDR msgaddrptr,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedAdvance(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedAgain(SCHNDX index,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedBranchEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildAlt(INT nummsgs,LPMSGADDR msgaddrs,LPINT minperiod,LPINT maxperiod,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildBuf(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT bufcount,LPBYTE bufptr,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildBufEx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,BOOL debug,BOOL microflag,INT algorithm,INT bufcount,LPBYTE bufptr,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildExx(INT basemsgnum,INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,LPVOID buf,ULONG bufsize,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildExxx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,BOOL debug,BOOL microflag,INT algorithm,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildExxxx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,BOOL debug,BOOL microflag,INT algorithm,BOOL interceptflag,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedCalc(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedCallEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedCheck(LPINT minperiod,LPINT maxperiod,LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedCheckEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedCheckMiddle(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);
BTI429API VOID __stdcall BTI429_SchedCheckReal(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);
BTI429API VOID __stdcall BTI429_SchedCheckStart(VOID);
BTI429API ULONG __stdcall BTI429_SchedConflicts(LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedDisplay(ULONG nummsgs,LPULONG count,LPULONG *data);
BTI429API ERRVAL __stdcall BTI429_SchedDivide(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedFix(LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedFixEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedFixMiddle(ULONG conflicts);
BTI429API VOID __stdcall BTI429_SchedFixStart(VOID);
BTI429API VOID __stdcall BTI429_SchedHook(INT index,LPVOID ptr);
BTI429API ERRVAL __stdcall BTI429_SchedInsert(ULONG events,ULONG index,ULONG msgnum,LPMSGADDR msgaddr,ULONG gapval,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsert2(ULONG events,ULONG index,INT msgnum,LPMSGADDR msgaddr,ULONG gapval,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsertEnd(ULONG events,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsertStart(ULONG events,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedIntercept(INT type,MSGADDR msgaddr,ULONG gapval,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_SchedLayout(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedLogEx(USHORT condition1,USHORT condition2,USHORT tagval,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedMaxval(LPULONG array,ULONG arraycount);
BTI429API ULONG __stdcall BTI429_SchedMinval(LPULONG array,ULONG arraycount);
BTI429API SCHNDX __stdcall BTI429_SchedNop(INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedParse(INT basemsgnum,LPMSGADDR msgaddr,INT channum,LPVOID infoptr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedPreprocess(INT nummsgs,BOOL speedflag,LPMSGADDR msgaddrptr,LPINT minlist,LPINT maxlist,BOOL debugflag,LPINT targetlist,LPINT minorframetime,LPINT majorframetime);
BTI429API SCHNDX __stdcall BTI429_SchedPulse0(INT dionum,INT channum,HCORE handleval);