Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4Build@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched4Build(Int32 nummsgs, UInt32[] msgaddrptr, Int32[] minlist, Int32[] maxlist, Int32 speedflag, Int32 microflag, Int32 debugvalflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4BuildEx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched4BuildEx(ref Int32 styleptr, Int32 nummsgs, Int32 minorframetime, Int32 majorframetime, Int32[] targetlist, Int32[] minlist, Int32[] maxlist, Int32 speedflag, Int32 microflag, Int32 interceptflag);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4BuildExx@72", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched4BuildExx(Int32 style, Int32 speedflag, Int32 microflag, Int32 debugvalflag, Int32 tryflag, Int32 nummsgs, Int32 minorframetime, Int32 majorframetime, Int32[] targetlist, Int32[] minlist, Int32[] maxlist, ref Int32 entriesptr, ref Int32 maxentriesptr, IntPtr infoptr, UInt32[] msgaddrptr, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedAdvance@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedAdvance(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedAgain@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBranchEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildAlt@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildAlt(Int32 nummsgs, ref UInt32 msgaddrs, ref Int32 minperiod, ref Int32 maxperiod, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildBuf@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildBuf(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 bufcount, ref byte bufptr, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildBufEx@48", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildBufEx(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, Int32 debugval, Int32 microflag, Int32 algorithm, Int32 bufcount, ref byte bufptr, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildEx(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildExx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildExx(Int32 basevalmsgnum, Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, IntPtr buf, UInt32 bufsize, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildExxx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildExxx(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, Int32 channum, Int32 debugval, Int32 microflag, Int32 algorithm, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuildExxxx@44", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuildExxxx(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, Int32 channum, Int32 debugval, Int32 microflag, Int32 algorithm, Int32 interceptflag, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCalc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedCalc(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCallEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedCallEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCheck@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedCheck(Int32[] minperiod, Int32[] maxperiod, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCheckEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedCheckEnd();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCheckMiddle@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedCheckMiddle(UInt32 msgnum, UInt32 minlen, UInt32 midlen, UInt32 maxlen);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCheckReal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedCheckReal(UInt32 msgnum, UInt32 minlen, UInt32 midlen, UInt32 maxlen);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCheckStart@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedCheckStart();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedConflicts@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedConflicts(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedDisplay@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern void BTI429_SchedDisplay(UInt32 nummsgs, ref UInt32 count, ref UInt32* data);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedDivide@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedDivide(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedFix@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedFix(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedFixEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedFixEnd();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedFixMiddle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedFixMiddle(UInt32 conflicts);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedFixStart@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedFixStart();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedHook(Int32 index, IntPtr ptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedInsert@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedInsert(UInt32 eventvals, UInt32 index, UInt32 msgnum, ref UInt32 msgaddr, UInt32 gapval, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedInsert2@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedInsert2(UInt32 eventvals, UInt32 index, Int32 msgnum, ref UInt32 msgaddr, UInt32 gapval, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedInsertEnd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedInsertEnd(UInt32 eventvals, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedInsertStart@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedInsertStart(UInt32 eventvals, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedIntercept@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedIntercept(Int32 typeval, UInt32 msgaddr, UInt32 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedLayout@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedLayout(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedLogEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedLogEx(UInt16 condition1, UInt16 condition2, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedMaxval(UInt32[] arrayval, UInt32 arrayvalcount);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedMinval(UInt32[] arrayval, UInt32 arrayvalcount);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedNop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedNop(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedParse@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedParse(Int32 basevalmsgnum, ref UInt32 msgaddr, Int32 channum, IntPtr infoptr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedPreprocess@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedPreprocess(Int32 nummsgs, Int32 speedflag, UInt32[] msgaddrptr, Int32[] minlist, Int32[] maxlist, Int32 debugvalflag, Int32[] targetlist, ref Int32 minorframetime, ref Int32 majorframetime);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedPulse0@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
